fixed javacript comments. Fixed alignment issues Sass

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -25,7 +25,7 @@ body {
     padding: 0 2rem;
 
     @include tablet {
-        width: 9.4321rem;
+        max-width: 9.4325rem;
         align-self: flex-end;
     }
 
